Made .radio-option label's white-space nowrap to prevent long options from wrapping to a second line

--- a/vulcantunes/src/app/ui/overview/layout/overview-layout.css
+++ b/vulcantunes/src/app/ui/overview/layout/overview-layout.css
@@ -126,6 +126,9 @@ footer {
   list-style-type: none;
   display: flex;
   margin-bottom: 0.5rem;
+  label {
+    white-space: nowrap;
+  }
 }
 .product-option-text {
   padding: 0.5rem;
